--- a/style.css
+++ b/style.css
@@ -335,7 +335,10 @@ section {
 }
 
 .about-content {
-    max-width: 500px;
+    max-width: 100%;
+    width: 100%;
+    padding: 0 15px;
+    
 }
 
 .about-content span {
@@ -428,7 +431,36 @@ section {
 .about-content p {
     margin-bottom: 1rem;
 }
+/* Responsive Styles */
+@media (min-width: 768px) {
+    .about {
+        flex-direction: row;
+        padding: 100px 10%;
+    }
 
+    .about-content {
+        max-width: 500px;
+        text-align: left;
+    }
+
+    .btn-box {
+        justify-content: flex-start;
+    }
+}
+
+@media (max-width: 767px) {
+    .about {
+        padding: 50px 10%;
+    }
+
+    .about-content p {
+        width: 100%;
+    }
+    
+.img-about img {
+    max-width: 100%;
+}
+}
 /*skills*/
 
 
@@ -640,7 +672,6 @@ section {
     margin: auto;
     overflow: hidden;
     display: flex;
-    /* align-items: center; */
   }
   .slider-wrapper {
     overflow: hidden;
@@ -649,6 +680,7 @@ section {
   .slider {
     display: flex;
     transition: transform 0.4s ease-in-out;
+    animation: slide 10s linear infinite;
   }
   .slide {
     min-width: 30.2%;
@@ -667,7 +699,7 @@ section {
     margin-top: 20px;
   }
   .service-box:hover {
-    transform: translateY(-0.7rem);
+    transform: translateY(0.2rem);
   }
   .service-icon {
     border: 2px solid var(--hover-color);
@@ -701,28 +733,57 @@ section {
   }
   .prev {
     display: flex;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
     align-items: center;
-    margin: auto;
     justify-content: center;
-    left: -2px;
     width: 31px;
-    border-radius: 10px;
     height: 100px;
+    border-radius: 10px;
   }
   .next {
     display: flex;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
     align-items: center;
-    margin: auto;
     justify-content: center;
-    right: -2px;
     width: 31px;
-    border-radius: 10px;
     height: 100px;
+    border-radius: 10px;
   }
-  
+  @keyframes slide {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
 
+  /* Responsive Design */
+@media (max-width: 768px) {
+
+  
+}
+
+@media (max-width: 480px) {
+    .service-icon {
+        font-size: 2rem; /* Reduce icon size */
+        padding: 2rem;
+    }
+
+   
+
+    .service-box h3 {
+        font-size: 1rem; /* Reduce title size */
+        padding: 15px;
+    }
+}
+  
 /* Contact section css */
 .contant{
     background: black;
@@ -854,6 +915,7 @@ footer {
             text-align: left;
             padding: 0 5%;
             transition: all .45s ease;
+            color: white;
         }
         .navlist a{
             display: block;
