--- a/style.css
+++ b/style.css
@@ -763,11 +763,11 @@ section {
       transform: translateX(-100%);
     }
   }
-
-  /* Responsive Design */
+/* Responsive Design */
 @media (max-width: 768px) {
-
-  
+    .slide {
+        min-width: 50%; /* Override to make slides full width on smaller screens */
+    }
 }
 
 @media (max-width: 480px) {
@@ -775,8 +775,6 @@ section {
         font-size: 2rem; /* Reduce icon size */
         padding: 2rem;
     }
-
-   
 
     .service-box h3 {
         font-size: 1rem; /* Reduce title size */
